--- a/BackEnd/DigitalTwinLab_old/src/main/resources/application.properties
+++ b/BackEnd/DigitalTwinLab_old/src/main/resources/application.properties
@@ -30,13 +30,13 @@ spring.freemarker.template-loader-path = classpath:/templates
 
 # DataSourceProperties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://8.142.79.40:3306/dtlab?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
+spring.datasource.url=jdbc:mysql:/xxx/dtlab?characterEncoding=utf-8&useSSL=false&serverTimezone=Hongkong
 #spring.datasource.username=root
 #spring.datasource.password=Helen0726
 #spring.datasource.username=root
 #spring.datasource.password=123456
 spring.datasource.username=dtlab
-spring.datasource.password=6NNhrfrk3xBtN5AT
+spring.datasource.password=xxx
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.maximum-pool-size=25
 spring.datasource.hikari.minimum-idle=5
@@ -51,8 +51,8 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 
 # MailProperties
 spring.mail.host=smtp.163.com
-spring.mail.username=zzzxy0321@163.com
-spring.mail.password=PQDVFUXRUKAKVQMM
+spring.mail.username=xxx@163.com
+spring.mail.password=xxx
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
