--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: mysql:8.0.28
     container_name: dtlab_mysql
     platform: "linux/x86_64"
+    restart: always
     ports:
       - "3306:3306"
     environment:
@@ -25,6 +26,7 @@ services:
   dtlab_redis:
     image: redislabs/rejson:2.8.3
     container_name: dtlab_redis
+    restart: always
     ports:
       - "6379:6379"
     volumes:
@@ -35,6 +37,7 @@ services:
   dtlab_backend:
     image: dtlab/backend:latest
     container_name: dtlab_backend
+    restart: always
     environment:
       - MYSQL_HOST=dtlab_mysql
       - REDIS_HOST=dtlab_redis
@@ -49,6 +52,7 @@ services:
       context: ../DTLab_frontend
       dockerfile: Dockerfile
     image: dtlab/dtlab_frontend:latest
+    restart: always
     container_name: dtlab_frontend
     ports:
       - "80:80"
