Update mqtt container

--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -63,7 +63,6 @@ services:
     restart: always
     ports:
       - "1883:1883"
-      - "8083:8083"
-      - "8084:8084"
-      - "8883:8883"
       - "18083:18083"
+    volumes:
+      - ./emqx/data:/opt/emqx/data
