--- a/DTLab_backend/pom.xml
+++ b/DTLab_backend/pom.xml
@@ -148,6 +148,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-mqtt</artifactId>
+            <version>5.3.2.RELEASE</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
