--- a/DTLab_backend/src/main/resources/application.properties
+++ b/DTLab_backend/src/main/resources/application.properties
@@ -75,3 +75,14 @@ spring.data.redis.host=${REDIS_HOST:127.0.0.1}
 spring.data.redis.jedis.pool.max-active=200
 spring.data.redis.jedis.pool.min-idle=20
 spring.data.redis.jedis.pool.max-wait=3000ms
+
+
+# mqtt
+mqtt.broker.url=${MQTT_URL:tcp://127.0.0.1:1883}
+mqtt.username=${MQTT_USERNAME:dtlab_server}
+mqtt.password=${MQTT_PASSWORD:dtlab_server}
+mqtt.client.id=${MQTT_CLIENTID:dtlab_server}
+mqtt.topics=face_recognize_result
+mqtt.qos=1
+mqtt.connectionTimeout=5000
+mqtt.keepAliveInterval=60
