--- a/DTLab_backend/src/main/resources/application.properties
+++ b/DTLab_backend/src/main/resources/application.properties
@@ -79,9 +79,9 @@ spring.data.redis.jedis.pool.max-wait=3000ms
 
 # mqtt
 mqtt.broker.url=${MQTT_URL:tcp://127.0.0.1:1883}
-mqtt.username=${MQTT_USERNAME:dtlab_server}
-mqtt.password=${MQTT_PASSWORD:dtlab_server}
-mqtt.client.id=${MQTT_CLIENTID:dtlab_server}
+mqtt.username=${MQTT_USERNAME:backend}
+mqtt.password=${MQTT_PASSWORD:backend}
+mqtt.client.id=${MQTT_CLIENTID:backend}
 mqtt.topics=face_recognize_result
 mqtt.qos=1
 mqtt.connectionTimeout=5000
