--- a/DTLab_algorithms/face-recognition/config.ini
+++ b/DTLab_algorithms/face-recognition/config.ini
@@ -9,6 +9,6 @@ show_video = False
 mqtt_client_id = camera1
 mqtt_host = localhost
 mqtt_port = 1883
-mqtt_topic = face_recognizer
+mqtt_topic = face_recognize_result
 mqtt_username = camera1
 mqtt_password = camera1
