Update .env content

--- a/DTLab_algorithms/hikvision/.env
+++ b/DTLab_algorithms/hikvision/.env
@@ -4,5 +4,5 @@ CAMERA_IP = ""
 CAMERA_USERNAME = ""
 # Password for the camera
 CAMERA_PASSWORD = ""
-# SDK path
-SDK_PATH = ""
+# Platform: "win64" or "linux64" or "armlinux64"
+PLATFORM = ""
